1、完整报文发送的相关代码，尚未代码整理，只是功能实现

--- a/gin-test/ICMng/html/index.html
+++ b/gin-test/ICMng/html/index.html
@@ -9,6 +9,7 @@
         $(function(){
             $("#BT_SendMsg").click(function(){
 
+                alert("BT_SendMsg")
                 if ($("#SendMsg").val().length == 0) {
                     alert("请输入发送报文后再进行发送")
                     return
@@ -16,18 +17,18 @@
                 var ip = $("#ServerIp").val();
                 var port = $("#ServerPort").val();
                 var msg = JSON.stringify(JSON.parse($("#SendMsg").val()));
+                var url = "/Msg/SendMsg"
 
-                var url = "/sendMsg"
                 //设置请求参数
                 var param = {"ip":ip, "port":port, "msg":msg };
                 var jsonObj = JSON.parse(msg)
                 $("#SendMsg").val(JSON.stringify(jsonObj, null, 4));
                 //发送Ajax请求
                 $.post(url,param,function(res){
-                    if (res == "noLogin"){
-                        location = "/pages/user/login.html"
-                    }else{
+                    if (res != "err"){
                         $("#ResMsg").val(res);
+                    }else{
+                        alert(res);
                     }
                 });
             });
